--- a/net7.0/Telia.LinqToGraphQLToModel.Benchmarks/BenchmarkDotNet.Artifacts/results/Telia.LinqToGraphQL.Benchmarks.LinqToGraphqlBenchmarks.Benchmarks.LinqToGraphqlBenchmarks-report.html
+++ b/net7.0/Telia.LinqToGraphQLToModel.Benchmarks/BenchmarkDotNet.Artifacts/results/Telia.LinqToGraphQL.Benchmarks.LinqToGraphqlBenchmarks.Benchmarks.LinqToGraphqlBenchmarks-report.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 <meta charset='utf-8' />
-<title>Telia.LinqToGraphQL.Benchmarks.LinqToGraphqlBenchmarks.Benchmarks.LinqToGraphqlBenchmarks-20230209-134146</title>
+<title>Telia.LinqToGraphQL.Benchmarks.LinqToGraphqlBenchmarks.Benchmarks.LinqToGraphqlBenchmarks-20230209-140308</title>
 
 <style type="text/css">
 	table { border-collapse: collapse; display: block; width: 100%; overflow: auto; }
@@ -17,7 +17,7 @@ BenchmarkDotNet=v0.13.4, OS=Windows 10 (10.0.19045.2486)
 Intel Core i7-9750H CPU 2.60GHz, 1 CPU, 12 logical and 6 physical cores
 .NET SDK=7.0.102
   [Host]     : .NET 7.0.2 (7.0.222.60605), X64 RyuJIT AVX2
-  Job-QGGOPN : .NET 7.0.2 (7.0.222.60605), X64 RyuJIT AVX2
+  Job-ASSKKG : .NET 7.0.2 (7.0.222.60605), X64 RyuJIT AVX2
 </code></pre>
 <pre><code>Runtime=.NET 7.0  InvocationCount=20  IterationCount=5  
 LaunchCount=3  UnrollFactor=1  WarmupCount=3  
@@ -26,8 +26,8 @@ LaunchCount=3  UnrollFactor=1  WarmupCount=3
 <table>
 <thead><tr><th>   Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>GetAllCountries</td><td>162.4 &mu;s</td><td>44.40 &mu;s</td><td>41.54 &mu;s</td><td>33.25 KB</td>
-</tr><tr><td>GetCountry</td><td>588.3 &mu;s</td><td>57.99 &mu;s</td><td>48.42 &mu;s</td><td>57.77 KB</td>
+</thead><tbody><tr><td>GetAllCountries</td><td>134.1 &mu;s</td><td>10.60 &mu;s</td><td>9.40 &mu;s</td><td>33.25 KB</td>
+</tr><tr><td>GetCountry</td><td>529.1 &mu;s</td><td>21.11 &mu;s</td><td>16.48 &mu;s</td><td>57.77 KB</td>
 </tr></tbody></table>
 </body>
 </html>
